--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "sqlite3": "^5.1.7",
     "telegram": "^2.26.22",
     "tesseract.js": "^7.0.0",
